# android-opensl-mp3-ogg-decode-test

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  decode-mp3-ogg-jni.cpp
app/src/main/java/com/h6ah4i/android/example/decodemp3ogg/: MainActivity.java
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
